# libhelix-mp3

./: CMakeLists.txt  mp3dec.c
pub/: mp3common.h  mp3dec.h
real/: buffers.c
static/: helix_static.c  helix_static.h
